crates/data-dict/tests/snapshots/validate__unknown_top_level_key.snap
---
source: crates/data-dict/tests/validate.rs
expression: "invalid_diagnostic(\"invalid/unknown-top-level-key.yaml\")"
---
Error: [Q-1-18] YAML Validation Failed
   ╭─[ invalid/unknown-top-level-key.yaml:3:1 ]
   │
 3 │ ╭─▶ version: 0.1.0
 4 │ ├─▶ bogus: 1
   │ │              
   │ ╰────────────── Unknown property 'bogus'
───╯
✖ At document root
ℹ Schema constraint: object
ℹ Check for typos in property names or remove unrecognized properties?
